versioned_docs/version-2.16/reference/targets/shell_command.mdx
---
title: shell_command
# The old-style `code...code` anchors are heading level 6, and shouldn't be visible in ToC
toc_max_heading_level: 5
---

import Field from "@site/src/components/reference/Field";
import styles from "@site/src/components/reference/styles.module.css";

---

Execute any external tool for its side effects.

Example BUILD file:

```
shell_command(
    command="./my-script.sh --flag",
    tools=["tar", "curl", "cat", "bash", "env"],
    execution_dependencies=[":scripts"],
    output_files=["logs/my-script.log"],
    output_directories=["results"],
)

shell_sources(name="scripts")
```

Remember to add this target to the dependencies of each consumer, such as your `python_tests` or `docker_image`. When relevant, Pants will run your `command` and insert the `outputs` into that consumer's context.

The command may be retried and/or cancelled, so ensure that it is idempotent.

Backend: <span className="color--primary">`pants.backend.shell`</span>

---

<span className={styles.options}>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codetagscode}
</div>

## `tags`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Arbitrary strings to describe a target.

For example, you may tag some test targets with &#x27;integration_test&#x27; so that you could run `scie-pants-linux-x86_64 --tag='integration_test' test ::` to only run on targets with that tag.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codedescriptioncode}
</div>

## `description`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

A human-readable description of the target.

Use `scie-pants-linux-x86_64 list --documented ::` to see all targets with descriptions.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeoutput_dependenciescode}
</div>

## `output_dependencies`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Any dependencies that the output artifacts require in order to be effectively consumed.

To enable legacy use cases, if `execution_dependencies` is `None`, these dependencies will be materialized in the execution sandbox. This behavior is deprecated, and will be removed in version 2.17.0.dev0.

See also `execution_dependencies` and `runnable_dependencies`.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeexecution_dependenciescode}
</div>

## `execution_dependencies`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

The execution dependencies for this command.

Dependencies specified here are those required to make the command complete successfully (e.g. file inputs, packages compiled from other targets, etc), but NOT required to make the output side-effects useful. Dependencies that are required to use the side-effects produced by this command should be specified using the `output_dependencies` field.

If this field is specified, dependencies from `output_dependencies` will not be added to the execution sandbox.

See also `output_dependencies` and `runnable_dependencies`.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#coderunnable_dependenciescode}
</div>

## `runnable_dependencies`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

The runnable dependencies for this command.

Dependencies specified here are those required to exist on the `PATH` to make the command complete successfully (interpreters specified in a `#!` command, etc). Note that these dependencies will be made available on the `PATH` with the name of the target.

See also `output_dependencies` and `execution_dependencies.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codecommandcode}
</div>

## `command`

<Field
    type_repr={`str`}
    default_repr={`None`}
>

Shell command to execute.

The command is executed as &#x27;bash -c &#x3C;command&#x3E;&#x27; by default. If you want to invoke a binary use `exec -a $0 <binary> <args>` as the command so that the binary gets the correct `argv[0]` set.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codelog_outputcode}
</div>

## `log_output`

<Field
    type_repr={`bool`}
    default_repr={`False`}
>

Set to true if you want the output logged to the console.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeoutput_filescode}
</div>

## `output_files`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`()`}
>

Specify the output files to capture, relative to the value of `workdir`.

For directories, use `output_directories`. At least one of `output_files` and`output_directories` must be specified.

Relative paths (including `..`) may be used, as long as the path does not ascend further than the build root.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeoutput_directoriescode}
</div>

## `output_directories`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`()`}
>

Specify full directories (including recursive descendants) of output to capture, relative to the value of `workdir`.

For individual files, use `output_files`. At least one of `output_files` and`output_directories` must be specified.

Relative paths (including `..`) may be used, as long as the path does not ascend further than the build root.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codetimeoutcode}
</div>

## `timeout`

<Field
    type_repr={`int | None`}
    default_repr={`30`}
>

Command execution timeout (in seconds).

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codetoolscode}
</div>

## `tools`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`()`}
>

Specify required executable tools that might be used.

Only the tools explicitly provided will be available on the search PATH, and these tools must be found on the paths provided by [shell-setup].executable_search_paths (which defaults to the system PATH).

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeextra_env_varscode}
</div>

## `extra_env_vars`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Additional environment variables to provide to the process.

Entries are strings in the form `ENV_VAR=value` to use explicitly; or just `ENV_VAR` to copy the value of a variable in Pants&#x27;s own environment.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeworkdircode}
</div>

## `workdir`

<Field
    type_repr={`str | None`}
    default_repr={`'.'`}
>

Sets the working directory for the process.

Values are relative to the build root, except in the following cases:

- `.` specifies the location of the `BUILD` file.
- Values beginning with `./` are relative to the location of the `BUILD` file.
- `/` or the empty string specifies the build root.
- Values beginning with `/` are also relative to the build root.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#coderoot_output_directorycode}
</div>

## `root_output_directory`

<Field
    type_repr={`str | None`}
    default_repr={`'/'`}
>

Adjusts the location of files output by this target, when consumed as a dependency.

```
    Values are relative to the build root, except in the following cases:

    * `.` specifies the location of the `BUILD` file.
    * Values beginning with `./` are relative to the location of the `BUILD` file.
    * `/` or the empty string specifies the build root.
    * Values beginning with `/` are also relative to the build root.
```

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeenvironmentcode}
</div>

## `environment`

<Field
    type_repr={`str | None`}
    default_repr={`'__local__'`}
>

Specify which environment target to consume environment-sensitive options from.

Once environments are defined in `[environments-preview].names`, you can specify the environment for this target by its name. Any fields that are defined in that environment will override the values from options set by `pants.toml`, command line values, or environment variables.

You can specify multiple valid environments by using `parametrize`. If `__local__` is specified, Pants will fall back to the `local_environment` defined for the current platform, or no environment if no such environment exists.

</Field>

</span>
